--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-java web 第一课时
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>huangszWeb</title>
+</head>
+<body>
+<h1 align="center">huangszWeb</h1>
+
+<form action="">
+    <div>
+        <a href="#introduction">个人简介</a>
+        <br/>
+        <a href="#hobby">个人爱好</a>
+        <br/>
+        <a href="resume">个人履历</a>
+        <br/>
+    </div>
+    <ul>
+        <li id="introduction">祖籍：山东</li>
+        <li id="hobby">
+            <p>爱好：字画艺术编程</p>
+        </li>
+        <li id="resume">
+            <span>编程：javaWeb &#160;html&#160;sql</span>
+            <br/>
+        </li>
+    </ul>
+    <table border="1">
+        <thead>
+        <td>成员</td>
+        <td>关系</td>
+        <td>居住地</td>
+        </thead>
+        <tr>
+            <td>超超</td>
+            <td>朋友</td>
+            <td>广州</td>
+        </tr>
+        <tr>
+            <td>小花</td>
+            <td>同学</td>
+            <td>杭州</td>
+        </tr>
+    </table>
+    <img src="logo11w.png" alt=""/>
+</form>
+</body>
+</html>
