1、table新增一行“同事”； 2、图片更新为《向日葵》。

--- a/index.html
+++ b/index.html
@@ -42,8 +42,13 @@
             <td>同学</td>
             <td>杭州</td>
         </tr>
+        <tr>
+            <td>Lily</td>
+            <td>同事</td>
+            <td>吉林</td>
+        </tr>
     </table>
-    <img src="logo11w.png" alt=""/>
+    <img src="向日葵.jpg" alt=""/>
 </form>
 </body>
 </html>
