1、table新增一行“同事”； 2、图片更新为《日出》。

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <br/>
         </li>
     </ul>
-    <table border="1">
+    <table border="1" bgcolor="#f0f8ff">
         <thead>
         <td>成员</td>
         <td>关系</td>
@@ -48,7 +48,7 @@
             <td>吉林</td>
         </tr>
     </table>
-    <img src="向日葵.jpg" alt=""/>
+    <img src="日出.jpg" alt=""/>
 </form>
 </body>
 </html>
