1、新增3张图片； 2、新建个人主页myhomepage.html; 问题： a.在网页中的ul和ol没有按照设置的type展示； b.尝试加过网页跑马灯的时候，function已经触发，但是不见效果； c.在中间主体右边部分加的背景图片没有效果（取消样式中的背景颜色，还是没有看到背景图）； d.还有很多细节问题会在接下来的练习中会提出来，请老师方便时给予指点。

--- a/myhomepage.html
+++ b/myhomepage.html
@@ -46,7 +46,7 @@
                 <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;博客：<a href="http://blog.sina.com.cn/u/1657814753">黄兮27的博客</a></span>
             </p>
         </div>
-        <div id="content">
+        <div id="content" style="background: image('我爱祖国.jpg')">
             <ol type="A">
                 <li id="过去">
                     <h3>过去</h3>
@@ -90,15 +90,11 @@
                 <li id="将来">
                     <h3>将来</h3>
                     <p>
-                        　●如果你希望现在与过去不同，请研究过去（斯宾诺沙）
-
-                        　　●如今逗乐我们的一切都曾是某种危急关头（弗吉妮亚·伍尔夫）
-
-                        　　●不要等到日子过去了才找出它们的可爱之点（法国）
-
-                        　　●不要埋首于远昔的过去，把握现在吧（德国）
-
-                        　　●不要让昨天占用今天的时间（美洲）
+                        <span>●如果你希望现在与过去不同，请研究过去（斯宾诺沙）</span><br/>
+                        <span>●如今逗乐我们的一切都曾是某种危急关头（弗吉妮亚·伍尔夫）</span><br/>
+                        <span>●不要等到日子过去了才找出它们的可爱之点（法国）</span><br/>
+                        <span>●不要埋首于远昔的过去，把握现在吧（德国）</span><br/>
+                        <span>●不要让昨天占用今天的时间（美洲）</span><br/>
                     </p>
                 </li>
                 <li id="未完待续">
