1.按照老师要求改了图片的存放位置； 2.开始CSS的练习；

--- a/teachersday.html
+++ b/teachersday.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>教师节</title>
 </head>
-<body background="背景云.jpg">
+<body background="imgs/bgimg.jpg">
     <h1 align="center"><marquee  width="500" height="40"><font color="red " size="6">教师节快乐——</font><i>老师辛苦了！</i></marquee></h1>
     <div>
         <dl>
@@ -12,7 +12,7 @@
             <dd>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;尊师重教是中国的传统，早在公元前11世纪的西周时期，就提出“弟子事师，敬同于父”。教师节，旨在肯定教师为教育事业所做的贡献。1985年，第六届全国人大常委会第九次会议通过了国务院关于建立教师节的议案，会议决定将每年的9月10日定为教师节。1985年9月10日，是中国第一个教师节。
                     <br>
-                    <img src="教师节1.jpg" align="right" border="0">
+                    <img src="imgs/teachersday.jpg" align="right" border="0">
                 </p>
             </dd>
         </dl>
@@ -233,8 +233,8 @@
             <br><br >
             <div>
                 <textarea name="" id="" cols="100" rows="13" resize="none" >大家对Java语言的学习有什么疑问或体会请在此留言吧</textarea>
-                &nbsp;
-                <img src="好好学习.jpg" alt="好好学习天天向上" width="150" height="200" align="right"/>&nbsp;
+                &nbsp;bgimg.jpg
+                <img src="imgs/haohaoxuexi.jpg" alt="好好学习天天向上" width="150" height="200" align="right"/>&nbsp;
             </div>
             <br>
             <hr>
